--- a/apps/clients/project.json
+++ b/apps/clients/project.json
@@ -1,23 +1,20 @@
 {
   "projectType": "application",
-  "sourceRoot": "apps/dashboard/src",
+  "sourceRoot": "apps/clients/src",
   "prefix": "dev",
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/apps/dashboard",
-        "index": "apps/dashboard/src/index.html",
-        "main": "apps/dashboard/src/main.ts",
-        "polyfills": "apps/dashboard/src/polyfills.ts",
-        "tsConfig": "apps/dashboard/tsconfig.app.json",
+        "outputPath": "dist/apps/clients",
+        "index": "apps/clients/src/index.html",
+        "main": "apps/clients/src/main.ts",
+        "polyfills": "apps/clients/src/polyfills.ts",
+        "tsConfig": "apps/clients/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
-        "assets": [
-          "apps/dashboard/src/favicon.ico",
-          "apps/dashboard/src/assets"
-        ],
-        "styles": ["apps/dashboard/src/styles.scss"],
+        "assets": ["apps/clients/src/favicon.ico", "apps/clients/src/assets"],
+        "styles": ["apps/clients/src/styles.scss"],
         "scripts": []
       },
       "configurations": {
@@ -36,8 +33,8 @@
           ],
           "fileReplacements": [
             {
-              "replace": "apps/dashboard/src/environments/environment.ts",
-              "with": "apps/dashboard/src/environments/environment.prod.ts"
+              "replace": "apps/clients/src/environments/environment.ts",
+              "with": "apps/clients/src/environments/environment.prod.ts"
             }
           ],
           "outputHashing": "all"
@@ -57,37 +54,31 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "browserTarget": "dashboard:build:production"
+          "browserTarget": "clients:build:production"
         },
         "development": {
-          "browserTarget": "dashboard:build:development"
+          "browserTarget": "clients:build:development"
         }
       },
-      "defaultConfiguration": "development",
-      "options": {
-        "proxyConfig": "apps/dashboard/proxy.conf.json"
-      }
+      "defaultConfiguration": "development"
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "browserTarget": "dashboard:build"
+        "browserTarget": "clients:build"
       }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "options": {
-        "lintFilePatterns": [
-          "apps/dashboard/src/**/*.ts",
-          "apps/dashboard/src/**/*.html"
-        ]
+        "lintFilePatterns": ["apps/clients/**/*.ts", "apps/clients/**/*.html"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/dashboard"],
+      "outputs": ["coverage/apps/clients"],
       "options": {
-        "jestConfig": "apps/dashboard/jest.config.js",
+        "jestConfig": "apps/clients/jest.config.ts",
         "passWithNoTests": true
       }
     }
