--- a/package.json
+++ b/package.json
@@ -7,58 +7,67 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "serve:api": "nx run api:serve",
+    "serve:dashboard": "ng serve dashboard --open",
+    "serve:clients": "ng serve clients --port 4300 --open",
+    "serve:all": "concurrently \"npm run serve:api\" \"npm run serve:dashboard\" \"npm run serve:clients\""
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.0",
-    "@angular/common": "~13.3.0",
-    "@angular/compiler": "~13.3.0",
-    "@angular/core": "~13.3.0",
-    "@angular/forms": "~13.3.0",
-    "@angular/platform-browser": "~13.3.0",
-    "@angular/platform-browser-dynamic": "~13.3.0",
-    "@angular/router": "~13.3.0",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nrwl/angular": "13.10.6",
+    "@angular/animations": "14.2.1",
+    "@angular/common": "14.2.1",
+    "@angular/compiler": "14.2.1",
+    "@angular/core": "14.2.1",
+    "@angular/forms": "14.2.1",
+    "@angular/platform-browser": "14.2.1",
+    "@angular/platform-browser-dynamic": "14.2.1",
+    "@angular/router": "14.2.1",
+    "@nestjs/common": "9.0.0",
+    "@nestjs/core": "9.0.0",
+    "@nestjs/platform-express": "9.0.0",
+    "@nrwl/angular": "14.7.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.0",
-    "@angular-eslint/eslint-plugin": "~13.1.0",
-    "@angular-eslint/eslint-plugin-template": "~13.1.0",
-    "@angular-eslint/template-parser": "~13.1.0",
-    "@angular/cli": "~13.3.0",
-    "@angular/compiler-cli": "~13.3.0",
-    "@angular/language-service": "~13.3.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@nrwl/cli": "13.10.6",
-    "@nrwl/cypress": "13.10.6",
-    "@nrwl/eslint-plugin-nx": "13.10.6",
-    "@nrwl/jest": "13.10.6",
-    "@nrwl/linter": "13.10.6",
-    "@nrwl/nest": "13.10.6",
-    "@nrwl/node": "13.10.6",
-    "@nrwl/workspace": "13.10.6",
-    "@types/jest": "27.0.2",
-    "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "~5.18.0",
-    "@typescript-eslint/parser": "~5.18.0",
+    "@angular-devkit/build-angular": "14.2.2",
+    "@angular-eslint/eslint-plugin": "14.0.4",
+    "@angular-eslint/eslint-plugin-template": "14.0.4",
+    "@angular-eslint/template-parser": "14.0.4",
+    "@angular/cli": "^14.2.2",
+    "@angular/compiler-cli": "14.2.1",
+    "@angular/language-service": "14.2.1",
+    "@nestjs/schematics": "9.0.0",
+    "@nestjs/testing": "9.0.0",
+    "@nrwl/cli": "14.7.3",
+    "@nrwl/cypress": "14.7.3",
+    "@nrwl/eslint-plugin-nx": "14.7.3",
+    "@nrwl/jest": "14.7.3",
+    "@nrwl/linter": "14.7.3",
+    "@nrwl/nest": "14.7.3",
+    "@nrwl/node": "14.7.3",
+    "@nrwl/workspace": "14.7.3",
+    "@types/jest": "28.1.8",
+    "@types/node": "18.7.1",
+    "@typescript-eslint/eslint-plugin": "5.33.1",
+    "@typescript-eslint/parser": "5.33.1",
+    "concurrently": "^7.4.0",
+    "currently": "^0.0.8",
     "cypress": "^9.1.0",
-    "eslint": "~8.12.0",
+    "eslint": "8.15.0",
     "eslint-config-prettier": "8.1.0",
-    "jest": "27.2.3",
-    "jest-preset-angular": "11.1.1",
-    "nx": "13.10.6",
-    "prettier": "^2.5.1",
-    "ts-jest": "27.0.5",
+    "eslint-plugin-cypress": "^2.10.3",
+    "jest": "28.1.3",
+    "jest-environment-jsdom": "28.1.1",
+    "jest-preset-angular": "12.2.2",
+    "nx": "14.7.3",
+    "prettier": "2.6.2",
+    "ts-jest": "28.0.8",
+    "ts-node": "10.9.1",
     "tslint": "~6.1.0",
-    "typescript": "~4.6.2"
+    "typescript": "4.7.4"
   }
 }
