Add libs: core-data and core-state

--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -4,12 +4,16 @@
   "targets": {
     "build": {
       "executor": "@nrwl/node:webpack",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/api",
         "main": "apps/api/src/main.ts",
         "tsConfig": "apps/api/tsconfig.app.json",
-        "assets": ["apps/api/src/assets"]
+        "assets": [
+          "apps/api/src/assets"
+        ]
       },
       "configurations": {
         "production": {
@@ -38,12 +42,17 @@
           "apps/api/tsconfig.app.json",
           "apps/api/tsconfig.spec.json"
         ],
-        "exclude": ["**/node_modules/**", "!apps/api/**/*"]
+        "exclude": [
+          "**/node_modules/**",
+          "!apps/api/**/*"
+        ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/api"],
+      "outputs": [
+        "coverage/apps/api"
+      ],
       "options": {
         "jestConfig": "apps/api/jest.config.js",
         "passWithNoTests": true
