--- a/angular.json
+++ b/angular.json
@@ -5,6 +5,8 @@
     "api-interfaces": "libs/api-interfaces",
     "clients": "apps/clients",
     "clients-e2e": "apps/clients-e2e",
+    "core-data": "libs/core-data",
+    "core-state": "libs/core-state",
     "dashboard": "apps/dashboard",
     "dashboard-e2e": "apps/dashboard-e2e"
   }
