--- a/apps/clients-e2e/project.json
+++ b/apps/clients-e2e/project.json
@@ -18,12 +18,18 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["apps/clients-e2e/**/*.{js,ts}"]
+        "lintFilePatterns": [
+          "apps/clients-e2e/**/*.{js,ts}"
+        ]
       }
     }
   },
   "tags": [],
-  "implicitDependencies": ["clients"]
+  "implicitDependencies": [
+    "clients"
+  ]
 }
