--- a/apps/dashboard-e2e/project.json
+++ b/apps/dashboard-e2e/project.json
@@ -17,11 +17,18 @@
     "lint": {
       "executor": "@angular-devkit/build-angular:tslint",
       "options": {
-        "tsConfig": ["apps/dashboard-e2e/tsconfig.json"],
-        "exclude": ["**/node_modules/**", "!apps/dashboard-e2e/**/*"]
+        "tsConfig": [
+          "apps/dashboard-e2e/tsconfig.json"
+        ],
+        "exclude": [
+          "**/node_modules/**",
+          "!apps/dashboard-e2e/**/*"
+        ]
       }
     }
   },
   "tags": [],
-  "implicitDependencies": ["dashboard"]
+  "implicitDependencies": [
+    "dashboard"
+  ]
 }
