Add rest api for mechanics, mechanic services and services by mechanic

--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
     "@angular/router": "14.2.1",
     "@nestjs/common": "9.0.0",
     "@nestjs/core": "9.0.0",
+    "@nestjs/mapped-types": "^1.1.0",
     "@nestjs/platform-express": "9.0.0",
+    "@nestjs/swagger": "^6.1.2",
     "@nrwl/angular": "14.7.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
+    "swagger-ui-express": "^4.5.0",
     "tslib": "^2.0.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -49,7 +53,7 @@
     "@nrwl/eslint-plugin-nx": "14.7.3",
     "@nrwl/jest": "14.7.3",
     "@nrwl/linter": "14.7.3",
-    "@nrwl/nest": "14.7.3",
+    "@nrwl/nest": "^14.7.3",
     "@nrwl/node": "14.7.3",
     "@nrwl/workspace": "14.7.3",
     "@types/jest": "28.1.8",
