--- a/angular.json
+++ b/angular.json
@@ -8,6 +8,7 @@
     "core-data": "libs/core-data",
     "core-state": "libs/core-state",
     "dashboard": "apps/dashboard",
-    "dashboard-e2e": "apps/dashboard-e2e"
+    "dashboard-e2e": "apps/dashboard-e2e",
+    "material": "libs/material"
   }
 }
