--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
     "paths": {
       "@dev/api-interfaces": ["libs/api-interfaces/src/index.ts"],
       "@dev/core-data": ["libs/core-data/src/index.ts"],
-      "@dev/core-state": ["libs/core-state/src/index.ts"]
+      "@dev/core-state": ["libs/core-state/src/index.ts"],
+      "@dev/material": ["libs/material/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
