--- a/angular.json
+++ b/angular.json
@@ -5,6 +5,7 @@
     "api-interfaces": "libs/api-interfaces",
     "clients": "apps/clients",
     "clients-e2e": "apps/clients-e2e",
+    "common-ui": "libs/common-ui",
     "core-data": "libs/core-data",
     "core-state": "libs/core-state",
     "dashboard": "apps/dashboard",
