--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,9 +16,10 @@
     "baseUrl": ".",
     "paths": {
       "@dev/api-interfaces": ["libs/api-interfaces/src/index.ts"],
+      "@dev/common-ui": ["libs/common-ui/src/index.ts"],
       "@dev/core-data": ["libs/core-data/src/index.ts"],
-      "@dev/core-data/services": ["libs/core-data/src/lib/services/index.ts"],
       "@dev/core-data/facades": ["libs/core-data/src/lib/facades/index.ts"],
+      "@dev/core-data/services": ["libs/core-data/src/lib/services/index.ts"],
       "@dev/core-state": ["libs/core-state/src/index.ts"],
       "@dev/material": ["libs/material/src/index.ts"]
     }
