--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "paths": {
       "@dev/api-interfaces": ["libs/api-interfaces/src/index.ts"],
       "@dev/common-ui": ["libs/common-ui/src/index.ts"],
+      "@dev/common-ui/*": ["libs/common-ui/src/lib/*"],
       "@dev/core-data": ["libs/core-data/src/index.ts"],
       "@dev/core-data/facades": ["libs/core-data/src/lib/facades/index.ts"],
       "@dev/core-data/services": ["libs/core-data/src/lib/services/index.ts"],
